--- a/website_portal_left_menu/views/layout.xml
+++ b/website_portal_left_menu/views/layout.xml
@@ -38,29 +38,36 @@
             <t t-set="left_menu"
                t-value="request.env.ref('website_portal_left_menu.left_menu')"/>
             <t t-foreach="left_menu.child_id" t-as="submenu">
-                <t t-call="website.submenu"/>
+                <t t-call="website_portal_left_menu.submenu"/>
             </t>
           </ul>
-        </div><!--/.nav-collapse -->
+        </div>
       </nav>
     </div>
 </template>
 
-<!--<template id="left_menu_wrap" name="Left Menu Wrap">-->
-    <!--<div class="row row-offcanvas row-offcanvas-left">-->
-        <!--<div id="sidebar" class="sidebar-offcanvas" role="navigation">-->
-            <!--<div class="sidebar-nav">-->
-                <!--<ul id="left_menu" class="nav">-->
-                    <!--<t t-set="left_menu"-->
-                       <!--t-value="request.env.ref('website_portal_left_menu.left_menu')"/>-->
-                    <!--<t t-foreach="left_menu.child_id" t-as="submenu">-->
-                        <!--<t t-call="website.submenu"/>-->
-                    <!--</t>-->
-                <!--</ul>-->
-            <!--</div>-->
-        <!--</div>-->
-    <!--</div>-->
-<!--</template>-->
+<template id="submenu" name="Submenu">
+    <li t-if="not submenu.child_id" t-att-class="
+        'active' if submenu.url and submenu.url != '/' and request.httprequest.path == submenu.url.replace('/page/website.', '/page/') else None
+        ">
+        <a t-att-href="(website.menu_id.child_id[0] == submenu) and '/' or submenu.url" t-ignore="true" t-att-target="'_blank' if submenu.new_window else None">
+            <span t-field="submenu.name"/>
+        </a>
+    </li>
+    <li t-if="submenu.child_id" t-attf-class="dropdown #{
+        (submenu.url and submenu.url != '/' and any([request.httprequest.path == child.url.replace('/page/website.', '/page/') for child in submenu.child_id if child.url]) or
+         (submenu.url and request.httprequest.path == submenu.url.replace('/page/website.', '/page/'))) and 'active'
+        }">
+        <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+            <span t-field="submenu.name"/> <span class="caret" t-ignore="true"></span>
+        </a>
+        <ul class="dropdown-menu" role="menu">
+            <t t-foreach="submenu.child_id" t-as="submenu">
+                <t t-call="website.submenu"/>
+            </t>
+        </ul>
+    </li>
+</template>
 
 </data>
 </openerp>
