--- a/website_portal_sale_left_menu/views/website_portal_sale.xml
+++ b/website_portal_sale_left_menu/views/website_portal_sale.xml
@@ -26,5 +26,13 @@
         </xpath>
     </template>
 
+    <template id="orders_followup"
+              name="Orders"
+              inherit_id="website_portal_sale.orders_followup">
+        <xpath expr="t[@t-call='website.layout']" position="attributes">
+            <attribute name="t-call">website_portal_left_menu.layout</attribute>
+        </xpath>
+    </template>
+
 </data>
 </openerp>
