--- a/website_portal_left_menu/views/layout.xml
+++ b/website_portal_left_menu/views/layout.xml
@@ -2,21 +2,28 @@
 <openerp>
 <data>
 
-<template id="layout" inherit_id="website.layout" name="Main layout Left Menu" primary="True">
+<template id="layout" inherit_id="website.layout" name="Main layout Left Menu"
+          customize_show="True" active="True">
     <xpath expr="//main" position="replace">
         <main>
-            <div class="container">
-                <div class="row mt32">
-                    <div class="col-xs-12 col-sm-2">
-                        <t t-call="website_portal_left_menu.left_menu_wrap"/>
-                    </div>
-                    <div class="col-xs-12 col-sm-10">
-                        <div id="main" class="col-xs-12 col-sm-12">
-                            <t t-raw="0"/>
+            <!-- TODO: Better search -->
+            <t t-if="'/my/' not in request.httprequest.base_url">
+                <t t-raw="0"/>
+            </t>
+            <t t-if="'/my/' in request.httprequest.base_url">
+                <div class="container">
+                    <div class="row mt32">
+                        <div class="col-xs-12 col-sm-2">
+                            <t t-call="website_portal_left_menu.left_menu_wrap"/>
+                        </div>
+                        <div class="col-xs-12 col-sm-10">
+                            <div id="main" class="col-xs-12 col-sm-12">
+                                <t t-raw="0"/>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
+            </t>
         </main>
     </xpath>
 </template>
@@ -33,7 +40,7 @@
                 </button>
                 <span class="visible-xs navbar-brand">Your Account</span>
             </div>
-            <div class="navbar-collapse collapse in sidebar-navbar-collapse">
+            <div class="navbar-collapse collapse sidebar-navbar-collapse">
                 <ul id="sidebar-left-items" class="nav navbar-nav">
                     <li><a href="/my/home"><span class="glyphicon glyphicon-user"></span> Your Account</a></li>
               </ul>
@@ -41,31 +48,6 @@
         </div>
     </div>
 </template>
-
-<!--<template id="left_menu_wrap_xx" name="Left Menu Wrap">-->
-    <!--<div class="sidebar-nav">-->
-      <!--<nav id="oe_left_menu_navbar" class="navbar navbar-default" role="navigation">-->
-        <!--<div class="navbar-header">-->
-          <!--<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".sidebar-navbar-collapse-left-menu">-->
-            <!--<span class="sr-only">Toggle navigation</span>-->
-            <!--<span class="icon-bar"></span>-->
-            <!--<span class="icon-bar"></span>-->
-            <!--<span class="icon-bar"></span>-->
-          <!--</button>-->
-          <!--<span class="visible-xs navbar-brand">Menu</span>-->
-        <!--</div>-->
-        <!--<div class="navbar-collapse collapse sidebar-navbar-collapse-left-menu">-->
-          <!--<ul id="left_menu" class="nav navbar-nav collapse">-->
-            <!--<t t-set="left_menu"-->
-               <!--t-value="request.env.ref('website_portal_left_menu.left_menu')"/>-->
-            <!--<t t-foreach="left_menu.child_id" t-as="submenu">-->
-                <!--<t t-call="website_portal_left_menu.submenu"/>-->
-            <!--</t>-->
-          <!--</ul>-->
-        <!--</div>-->
-      <!--</nav>-->
-    <!--</div>-->
-<!--</template>-->
 
 </data>
 </openerp>
