--- a/website_portal_left_menu/views/layout.xml
+++ b/website_portal_left_menu/views/layout.xml
@@ -30,7 +30,7 @@
 
 <template id="left_menu_wrap" name="Left Menu Wrap">
     <div class="sidebar-nav">
-        <div class="navbar navbar-default" role="navigation">
+        <div class="navbar" role="navigation">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".sidebar-navbar-collapse">
                     <span class="sr-only">Toggle navigation</span>
